# StremioRevamped

./: CMakeLists.txt  stremio-web
stremio-webBackend/: package-lock.json  package.json
stremio-webBackend/src/common/: useFullscreen.ts
stremio-webBackend/src/components/MetaPreview/Ratings/: Ratings.less
stremio-webBackend/src/components/Transition/: Transition.tsx
stremio-webBackend/src/routes/Player/: Player.js
stremio-webBackend/src/routes/Player/Indicator/: Indicator.tsx
stremio-webBackend/src/routes/Player/SideDrawer/: SideDrawer.tsx
stremio-webBackend/src/routes/Settings/Shortcuts/: Shortcuts.tsx
stremio-webViewer/src/webview/: webview.cpp
